# ChangeLog for app-portage/eix
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  14 Jan 2013; Martin Väth <martin@mvath.de>
  Simplify handling of REPLACING_VERSIONS

  28 Sep 2012; Martin Väth <martin@mvath.de>
  Bump to EAPI=5

  15 Jul 2012; Martin Väth <martin@mvath.de>
  Update USE to match >=eix-0.26.0

  12 May 2012; Martin Väth <martin@mvath.de>
  base->eutils

  16 Apr 2012; Martin Väth <martin@mvath.de>
  Bump from the tree to make live ebuild; remove previous ChangeLog