@@ -11,6 +11,7 @@ app-portage/eix:optimization - Accept upstream's choices for CXXFLAGS/LDFLAGS fo
 app-portage/eix:security - This adds some checks which can prevent certain exploits if e.g. the eix code has a bug. If you use the hardened toolchain, using this flag does not increase security and can even lead to problems.
 app-portage/eix:sqlite - Compile in support for portage's sqlite backend; to actually use it you need additional configuration of portage and eix
 app-portage/eix:strong-optimization - Adds several more agressive CXXFLAGS/LDFLAGS for optimization like graphite (if available). May cause trouble with some buggy compiler versions. Absense of this USE flag does not strip user's *FLAGS
+app-portage/eix:strong-security - Add many checks to prevent exploits if eix code has a bug. This will slow down eix considerably. Use only if you are paranoid or have reasons to suspect a bug.
 app-portage/eix:tools - Create separate binary for script helper tools; useful if they are called extremely often
 app-shells/auto-fu-zsh:compile - Byte-compile to speed up
 app-shells/zsh:completion_AIX - install completions for AIX
