@@ -2,6 +2,9 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  26 Jan 2013; Martin Väth <martin@mvath.de>
+  Add IUSE=strong-security
+
   14 Jan 2013; Martin Väth <martin@mvath.de>
   Simplify handling of REPLACING_VERSIONS
 
